@@ -1,6 +1,14 @@
 # ChangeLog for gentoo/src/catalyst 
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.134 2005/01/03 21:09:08 zhen Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.135 2005/01/04 21:13:43 wolf31o2 Exp $
+
+  04 Jan 2005; Chris Gianelloni <wolf31o2@gentoo.org>
+  modules/embedded_target.py, modules/generic_stage_target.py,
+  modules/grp_target.py, modules/livecd_stage1_target.py,
+  modules/livecd_stage2_target.py, modules/netboot.py,
+  modules/stage1_target.py, modules/tinderbox_target.py:
+  Added patches from Eric Edgar <e_edgar@hotmail.com> from bug #70663 to
+  separate out specific target logic from the generic targets modules.
 
   03 Jan 2005; John Davis <zhen@gentoo.org> arch/ppc.py:
   new PPC arch file from pvdabeel@gentoo.org
